<resources>
    <string name="app_name">BACtoDriving</string>
    <string name="hello_world">BACtoDriving</string>
    <string name="action_settings">BACtoDriving</string>
    <string name="title_activity_login">BACtoDriving</string>
    <string name="title_activity_register">BACtoDriving</string>
    <string name="title_activity_main">BACtoDriving</string>
    <string name="title_activity_calculate">BACtoDriving</string>
    <string name="title_activity_calculation">BACtoDriving</string>
    <string name="title_activity_no_account">BACtoDriving</string>
    <string name="title_activity_quick_calc">BACtoDriving</string>
    <string name="title_activity_party_calc">BACtoDriving</string>
    <string name="title_activity_help">BACtoDriving</string>
    <string name="start_app">Start</string>

    <string name="textViewWeight">Weight</string>
    <string name="textViewDrinks">Drinks</string>
    <string name="textViewTime">Time</string>
    <string name="textViewGender">Gender</string>
    <string name="textViewMale">Male</string>
    <string name="textViewFemale">Female</string>
    <string name="calculate">Calculate!</string>


</resources>
