<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroupQuick">

    </RadioGroup>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:id="@+id/radioFemale"
        android:layout_below="@+id/textViewGender"
        android:layout_toRightOf="@+id/textViewGender"
        android:layout_toEndOf="@+id/textViewGender" />
    <!--   android:text="@string/textViewMale"
            android:text="@string/textViewFemale"
-->

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:id="@+id/radioMale"
        android:text="Male"
        android:layout_alignTop="@+id/radioFemale"
        android:layout_toLeftOf="@+id/textViewGender"
        android:layout_toStartOf="@+id/textViewGender" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:onClick="onClick"
        android:id="@+id/calculateQuickCalc"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editWeightQC"
        android:layout_alignEnd="@+id/editWeightQC"
        android:layout_marginBottom="94dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewGender"
        android:id="@+id/textViewGender"

        android:layout_below="@+id/radioGroupQuick"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editWeightQC"
        android:width="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerDrinks"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/radioGroupQuick"
        android:layout_toEndOf="@+id/radioGroupQuick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewDrinks"
        android:id="@+id/textViewDrinks"
        android:layout_alignTop="@+id/textViewWeight"
        android:layout_toLeftOf="@+id/radioMale"
        android:layout_toStartOf="@+id/radioMale" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewWeight"
        android:id="@+id/textViewWeight"
        android:layout_above="@+id/numberPickerDrinks"
        android:layout_toRightOf="@+id/radioMale"
        android:layout_toEndOf="@+id/radioMale" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerTime"
        android:layout_below="@+id/textViewWeight"
        android:paddingLeft="30dp"
        android:layout_toRightOf="@+id/editWeightQC"
        android:layout_toEndOf="@+id/editWeightQC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewTime"
        android:id="@+id/textViewTime"
        android:paddingLeft= "40dp"
        android:layout_above="@+id/numberPickerTime"
        android:layout_alignLeft="@+id/numberPickerTime"
        android:layout_alignStart="@+id/numberPickerTime" />

</RelativeLayout>
